# self-improving-hdl-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
agents/: __init__.py  coder.py  llm.py
benchmarks/: datasets.yaml
cache/: __init__.py  retrieve.py  skill_cache.py
docs/: dataset_landing_plan.md  skill_cache_agent_research_plan.md  skill_cache_semantics.md  skill_observability_and_lifecycle.md  system_environment_setup.md
docs/experiments/: 2026-06-01-local-policy-ablation-small.md  2026-06-01-local-seed-smoke.md  2026-06-02-arbiter-active-skill-promotion.md  2026-06-02-arbiter-mutant-evaluator-ablation.md  2026-06-02-dataset-bootstrap-plan.md  2026-06-02-four-phase-experiment-summary.md  2026-06-02-local-hard-task-notes.md  2026-06-02-next-round-experiments.md  2026-06-03-verilogeval-seq20-formal-run.md  2026-06-05-verilogeval-seq20-hard-timeout-rerun.md  2026-06-05-verilogeval-seq5-hard-timeout-rerun.md  2026-06-07-candidate-block-validation.md  2026-06-07-evolution-stress8-run.md  2026-06-07-short-stress4-run.md  2026-06-07-short-stress6-run.md  2026-06-07-validation-hard-probe.md  (+1 more)
experiments/: run_experiment.py  run_mutant_eval.py  run_repeated_task_ablation.py  run_task_worker.py  run_taskset_ablation.py
harness/: __init__.py  evaluate.py  run_task.py  runner.py  task_schema.py  testbench.py  tools.py
scripts/: build_hard_task_subset.py  download_datasets.py  import_verilogeval.py  merge_candidate_skills.py  summarize_candidate_skills.py  validate_candidate_blocks.py  validate_candidate_skill.py
skills/: __init__.py  mine.py
(+458 files in other folders)
